better img resolution and typo

--- a/flights_delay_demo.ipynb
+++ b/flights_delay_demo.ipynb
@@ -15,7 +15,7 @@
     "#### Learning from statistics\n",
     "\n",
     "Can we use machine learning to gain some more insight about the delay reasons from the published statistics? Yes.\n",
-    "For that purpose, several supervised ML models are trained in this notebook on air traffic data for the period of 2016/6 - 2017/5 for US domestic passenger flights$^1$ (around 5 million flights).\n",
+    "For that purpose, several supervised ML models are trained in this notebook on air traffic data for the period of 2016/6 - 2017/5 for US domestic passenger flights<sup>1</sup> (around 5 million flights).\n",
     "\n",
     "The problem was configured as a classification problem in two phases:\n",
     "\n",
@@ -39,9 +39,9 @@
     "\n",
     "<hr>\n",
     "\n",
-    "> $^1$The datasets are downloaded from [Bureau of Transportation Stats](https://www.transtats.bts.gov/DL_SelectFields.asp?Table_ID=236&DB_Short_Name=On-Time).<br>\n",
+    "> <sup>1</sup>The datasets are downloaded from [Bureau of Transportation Stats](https://www.transtats.bts.gov/DL_SelectFields.asp?Table_ID=236&DB_Short_Name=On-Time).<br>\n",
     "\n",
-    "> $^2$ Note: this problem can also be configured as a regression problem, where we try to estimate the delay time. However, for simplicity lets stick to classification only in this demo.\n",
+    "> Note: this problem can also be configured as a regression problem, where we try to estimate the delay time. However, for simplicity lets stick to classification only in this demo.\n",
     "\n",
     "\n"
    ]
@@ -56,7 +56,7 @@
     "1. [Binary classification](#binary)\n",
     "\n",
     "    1. [Load and process the data](#binary-load)\n",
-    "    2. [predicting whether a flight is delayed or not](#binary-train)\n",
+    "    2. [Predicting whether a flight is delayed or not](#binary-train)\n",
     "        - [using CatBoost](#binary-catboost)\n",
     "        - [using XGBoost](#binary-xgboost)\n",
     "        - [using Keras](#binary-keras)\n",
@@ -1204,7 +1204,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
